update build.gradle and gradle to 7.2