@@ -355,7 +355,8 @@ project(":grobid-service") {
         } else  {
             throw new RuntimeException("Unsupported platform!")
         }
-
+        
+        jvmArgs "--add-opens", "java.base/java.lang=ALL-UNNAMED"
         workingDir = rootProject.rootDir
         systemProperty "java.library.path","${System.getProperty('java.library.path')}:" + libraries
     }
@@ -505,7 +506,7 @@ project(":grobid-trainer") {
     } else  {
         throw new RuntimeException("Unsupported platform!")
     }
-
+    
     trainerTasks.each { taskName, mainClassName ->
         tasks.create(name: taskName, type: JavaExec, group: 'modeltraining') {
             main = mainClassName
@@ -529,7 +530,7 @@ project(":grobid-trainer") {
         main = 'org.grobid.trainer.evaluation.EndToEndEvaluation'
         classpath = sourceSets.main.runtimeClasspath
         args 'nlm', getArg('p2t', '.'), getArg('run', '0'), getArg('fileRatio', '1.0')
-        jvmArgs '-Xmx3072m'
+        jvmArgs '-Xmx3072m', "--add-opens", "java.base/java.lang=ALL-UNNAMED"
         systemProperty "java.library.path","${System.getProperty('java.library.path')}:" + libraries
     }
 
@@ -537,7 +538,7 @@ project(":grobid-trainer") {
         main = 'org.grobid.trainer.evaluation.EndToEndEvaluation'
         classpath = sourceSets.main.runtimeClasspath
         args 'tei', getArg('p2t', '.'), getArg('run', '0'), getArg('fileRatio', '1.0')
-        jvmArgs '-Xmx3072m'
+        jvmArgs '-Xmx3072m', "--add-opens", "java.base/java.lang=ALL-UNNAMED"
         systemProperty "java.library.path","${System.getProperty('java.library.path')}:" + libraries
     }
 
@@ -545,7 +546,7 @@ project(":grobid-trainer") {
         main = 'org.grobid.trainer.evaluation.EvaluationDOIMatching'
         classpath = sourceSets.main.runtimeClasspath
         args 'data', getArg('p2t', '.')
-        jvmArgs '-Xmx3072m'
+        jvmArgs '-Xmx3072m', "--add-opens", "java.base/java.lang=ALL-UNNAMED"
         systemProperty "java.library.path","${System.getProperty('java.library.path')}:" + libraries
     }
 
@@ -553,7 +554,7 @@ project(":grobid-trainer") {
         main = 'org.grobid.trainer.evaluation.EvaluationDOIMatching'
         classpath = sourceSets.main.runtimeClasspath
         args 'eval', getArg('p2t', '.')
-        jvmArgs '-Xmx3072m'
+        jvmArgs '-Xmx3072m', "--add-opens", "java.base/java.lang=ALL-UNNAMED"
         systemProperty "java.library.path","${System.getProperty('java.library.path')}:" + libraries
     }
 }
@@ -600,7 +601,7 @@ tasks.coveralls {
 }
 
 wrapper {
-    gradleVersion "7.1.1"
+    gradleVersion "7.2"
 }
 
 build.dependsOn project.getSubprojects().collect({ it.getTasks().getByName("build") })
